<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">心率</string>
    <string name="heart_rate_unit">次/分</string>
    <string name="heart_rate_init">0</string>
    <string name="start">开始</string>
    <string name="hight_and_low_pressure_label">高压/低压</string>
    <string name="hight_and_low_pressure"><xliff:g id="hight_pressure">%1$s</xliff:g>/<xliff:g id="low_pressure">%2$s</xliff:g></string>
    <string name="step_label">步</string>
    <string name="step_0">0</string>
    <string name="step_9800">9800</string>
    <string name="sport_kilometre">%1$s km</string>
    <string name="sport_calorie">%1$s Kcal</string>
    <string name="heart_rate_title">心率</string>
    <string name="blood_pressure_title">血压</string>
    <string name="sport_title">运动</string>
    <string name="sedentary_remind">提醒</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="device_bind_confirm">家人开始关注您同意吗？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="network_error">网络连接不可用，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用</string>
    <string name="device_unbind">家人已取消关注您</string>
    <string name="device_unbind_title">设备已解除绑定</string>
    
    <!--Volley error-->
    <string name="unknown_error">请求服务器出错，错误代码未知</string>
    <string name="no_internet">无网络连接，无法连接服务器</string>
    <string name="server_error">连接服务器出错</string>
    <string name="resourse_error">资源找不到</string>
    <string name="network_conn_is_unavailable">网络连接不可用，请检查设置</string>
    
    <string name="sdcard_error">sdcard卡错误</string>
    <string name="detect_completed">测量完成!</string>
    <string name="high_blood_pressure">收缩压</string>
    <string name="low_blood_pressure">舒张压</string>
    <string name="heart_rate">心率</string>
    <string name="re_detect">重新测量</string>
    <string name="blood_pressure_mmhg">%1$smmHg</string>
    <string name="heart_rate_bmg">%1$sbmp</string>
    <string name="start_detect">开始检测</string>
    <string name="detect_error">测量异常需要重新测试</string>
    <string name="step_num">步数</string>
    <string name="target_step">目标:</string>
    <string name="calories">卡路里</string>
    <string name="remind_voice_error">提醒语音文件不存在，无法播放</string>
    <string name="heart_rate_detecting">检测中...</string>
    <string name="high_pressure">偏高</string>
    <string name="tv_qrcode">下载亿家联APP，家人互联更安全</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="string_help_network_text">当前应用需要连接网络。\n\n请点击\"设置\"-\"流量使用情况\"-打开移动网络。\n最后点击两次后退按钮，即可返回。</string>
    <string name="string_help_rebind_text">当前设备已经解除绑定。\n需要重新绑定,请点击重绑。</string>
    <string name="quit">取消</string>
    <string name="rebind">重绑</string>
    <string name="help_rebind_text">需要重新绑定,请重启应用。</string>
</resources>
