<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:heartrate="http://schemas.android.com/apk/res/cn.stj.fphealth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heart_rate_bg_shape" >

    <RelativeLayout
        android:id="@+id/rlayout_detect_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/iv_detect_completed"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/img_dagou" />

        <TextView
            android:id="@+id/tv_detect_completed"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_detect_completed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/detect_completed"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_detect_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlayout_detect_completed"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tv_high_blood_pressure_label"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/high_blood_pressure"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/tv_high_pressure_tip"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tv_high_blood_pressure_label"
            android:background="@drawable/high_pressure_bg_shape"
            android:text="@string/high_pressure"
            android:textColor="@color/red_color"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_high_blood_pressure"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/blood_pressure_mmhg"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/tv_low_blood_pressure_label"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_high_blood_pressure_label"
            android:layout_marginTop="13dp"
            android:text="@string/low_blood_pressure"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/tv_low_blood_pressure"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_high_blood_pressure_label"
            android:layout_marginTop="13dp"
            android:text="@string/blood_pressure_mmhg"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/tv_heart_rate_label"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_low_blood_pressure_label"
            android:layout_marginTop="13dp"
            android:text="@string/heart_rate"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/tv_heart_rate"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_low_blood_pressure"
            android:layout_marginTop="13dp"
            android:text="@string/heart_rate_bmg"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_25" />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/rlayout_detect_data"
        android:alpha="0.2"
        android:background="@color/gray_color" />

    <ImageView
        android:id="@+id/iv_re_detect_bg"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0.2"
        android:background="@drawable/btn_re_detect_selector"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/btn_re_detect"
        style="@style/page_text_style"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/re_detect"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_20" />

    <RelativeLayout
        android:id="@+id/rlayout_detect_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/heart_rate_bg_shape" >

        <cn.stj.fphealth.views.HeartRateCircleBar
            android:id="@+id/circlebar_progress_heart_rate"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            heartrate:middleText="@string/start_detect"
            heartrate:middleTextSize="25" />

        <TextView
            android:id="@+id/tv_heart_rate_detecting"
            style="@style/page_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/circlebar_progress_heart_rate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:text="@string/heart_rate_detecting"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_15"
            android:visibility="gone" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/circlebar_progress_heart_rate"
            android:layout_marginTop="65dp"
            android:alpha="0.2"
            android:background="@color/gray_color" />

        <LinearLayout
            android:id="@+id/llayout_chart_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/line"
            android:background="@color/transparent_color"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_network_unavailable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/network_unavailable_color"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_content_report"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_icon"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_20" 
            android:layout_centerVertical="true"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_title"
            android:alpha="0.2"
            android:background="@color/gray_color" />
    </RelativeLayout>

</RelativeLayout>