<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_bind_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="28dip"
        android:paddingBottom="20dip"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:id="@+id/textview_confirm_device_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.87"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:maxLength="80"
            android:text="@string/device_bind_confirm"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="6dip"
        android:paddingRight="16dip" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dip"
            android:alpha="0.87"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dip"
            android:alpha="1"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif-medium"
            android:text="@string/confirm"
            android:textColor="#FF4081"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

</LinearLayout>